@@ -1,3 +1,8 @@
+Fri Nov 15 17:07:31 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/delegate.rb (Delegator#send): override to get rid of global function interference.
+	  [Fixes GH-449]
+
 Fri Nov 15 01:06:04 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/objspace/objspace_dump.c (dump_output): allow IO object as
